--- a/styles.css
+++ b/styles.css
@@ -263,3 +263,6 @@ button {
     margin-top: 20px; /* Adjust as needed */
     margin-bottom: 20px; /* Adjust as needed */
 }
+@media only screen and (max-width: 600px) {
+  width: 100%;
+}
